ATSrails_ styled tag in reset password view, added company_name column to the users table

--- a/app/views/user/email.html.erb
+++ b/app/views/user/email.html.erb
@@ -11,9 +11,8 @@
     </h3>
   </div>
     </div> 
-      </h3>  
-      <%= submit_tag "Submit", size: 40 %>
-</div>
+      <input class="btn btn-primary" name="commit" type="submit" value="Submit"><br></br>
+    </div>
 </div>
 
 <% end %>
