--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,7 +1,7 @@
 
 <%= form_tag "/user" do %>
 <div class="pad">
-  <h2> New User Sign Up </h2>
+  <h2> New Customer Sign Up </h2>
 <div class="row">
   <div class="col-md-4">
     <h3>
