--- a/app/views/user/ship_bill_info.html.erb
+++ b/app/views/user/ship_bill_info.html.erb
@@ -18,6 +18,9 @@
       
         <%= label_tag "shipping_last_name", "Last name" %><br>
         <%= text_field_tag "shipping_last_name", @user.shipping_last_name, size: 20 %><br></br>
+        
+        <%= label_tag "company_name", "Company name" %><br>
+        <%= text_field_tag "company_name", @user.company_name, size: 20 %><br></br>
       
         <%= label_tag "shipping_address1", "Street address" %><br>
         <%= text_field_tag "shipping_address1", @user.shipping_address1, size: 20 %><br></br>
