--- a/app/views/layouts/_nav_header.erb
+++ b/app/views/layouts/_nav_header.erb
@@ -1,4 +1,4 @@
-<body class="body_b">
+<body class="body_b container">
 <nav class="navbar navbar-inverse" role="navigation">
   <a class="pull-right pad" href="/user/logout"><h4 style="color: white">Log out</h4></a>
   <a class="pull-right pad" href="<%= user_signin_path %>"><h4 style="color: white">Sign in</h4></a>
