--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     <%= flash_alert "warning" %>
     <%= flash_alert "danger" %>
 
+  <div class="container">
     <%= yield %>
+  </div>
 
     <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
       <p class="ats_footer">720-363-0163 &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp ats.biz@live.com  &nbsp &nbsp &nbsp &nbsp &nbsp 50 Rio Grande Blvd, Denver CO</p>
