--- a/app/views/admin/edit_product.html.erb
+++ b/app/views/admin/edit_product.html.erb
@@ -37,6 +37,9 @@
       <%= label_tag "quantity", "Quantity" %><br>
       <%= text_field_tag "quantity", @old_product.quantity, size: 20 %><br></br>
       
+      <%= label_tag :more_info, "More Info" %><br>
+      <%= text_field_tag :more_info, @old_product.more_info, size: 20 %><br></br>
+      
       <%= label_tag "description", "Description" %><br>
       <%= text_area_tag "description", @old_product.description, size: 20 %><br></br>
 
