--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -18,8 +18,8 @@
       <a href="/user/email">Forgot Password</a>
 </div>
 </div>
-<h4><i>(Admin Testing username: <b>wendy</b> password: <b>1234</b> or create account to test e-mails)
-  <br></br>(Admin link at the bottom left of the home page if signed in as "wendy")</i>
+<h4><i>(Create account to test)
+  <br></br></i>
 </h4>
 
 <% end %>
