ATSrails_put admin testing back

--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -18,7 +18,10 @@
       <a href="/user/email">Forgot Password</a>
 </div>
 </div>
-<h4><i>(Create account to test)
+  <h4>(For admin testing: <b>USERNAME: wendy PASSWORD: 1234 <br>
+  <i>the link for admin links in on the bottom left of the homepage when admin signed in)</i>
+  <br></br>     
+  </b>(Create account to test e-mail)</h4>
   <br></br></i>
 </h4>
 
