--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,8 +1,11 @@
-<%= form_tag "/main/contact" do %>
-<center>
-  <h3>We are located at:</h3>
-  <h3 style="color: black">50 Rio Grande Blvd, Denver CO</h3>
-  <h3>720-363-0163</h3>
-  <h3>ats.biz@live.com</h3>
-</center>
-<% end %>
+<div class='pull-left contact'>
+  <%= image_tag('store_front.jpg') %>
+</div>
+<div>
+  <h3 style='color: rgba(6, 72, 133, 0.85);'>For ordering or information call</h3>
+  <h3 style='color: rgba(6, 72, 133, 0.85);'> (720) 363-0163</h3>
+  <h4 style='color: rgba(6, 72, 133, 0.85);'><em> This is a mobile business offering delivery and tool service to most of Colorado!</em></h4>
+  <h3 style='color: white;'>We are located at:</h3>
+  <h3 style='color: white;'>50 Rio Grande Blvd, Denver CO</h3>
+  <h4 style='color: white;'><em>Tool Showroom hours: 8am to 4pm - Monday through Friday</em></h4>
+</div>
