style change in contact view

--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,7 +1,7 @@
 <div class='pull-left contact'>
   <%= image_tag('store_front.jpg') %>
 </div>
-<div>
+<div class='pull-right contact'>
   <h3 style='color: rgba(6, 72, 133, 0.85);'>For ordering or information call</h3>
   <h3 style='color: rgba(6, 72, 133, 0.85);'> (720) 363-0163</h3>
   <h4 style='color: rgba(6, 72, 133, 0.85);'><em> This is a mobile business offering delivery and tool service to most of Colorado!</em></h4>
