changed to fake contact info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
       <%= yield %>
     </div>
     <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
-      <p class="ats_footer">720-363-0163 &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp ats.biz@live.com  
-        &nbsp &nbsp &nbsp &nbsp &nbsp 50 Rio Grande Blvd, Denver CO</p>
+      <p class="ats_footer">303-555-1212 &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp actiontools@live.com  
+        &nbsp &nbsp &nbsp &nbsp &nbsp 555 Rio Grande Blvd, Denver CO</p>
     </nav>
   </body>
 </html>
